--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
+    "react-bootstrap-datetimepicker": "0.0.22",
+    "react-dates": "^21.8.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
